# rust-netlify-function

./: .gitignore  Cargo.toml  README.md  netlify.toml  package.json
functions/hello/: hello.js
functions/hello/pkg/: hello.d.ts  hello.js  hello_bg.d.ts  hello_bg.wasm  package.json
site/: index.html
src/: lib.rs
